--- a/index.Rmd
+++ b/index.Rmd
@@ -28,6 +28,16 @@ Cover Image: *A Goldsmith in his Shop* by Petrus Christus
 This work by [Sean Kross](http://seankross.com) is licensed 
 [CC0](https://creativecommons.org/publicdomain/zero/1.0/). Zero rights reserved.
 
+# Dedication {-}
+
+In memory of Toby Kross.
+
+# Acknowledgements {-}
+
+Thank you to Jeff Leek, Roger Peng, and Brian Caffo for your advice and support.
+Also thank you to Jon Calder and Elissa Redmiles for your edits and suggestions.
+
+
 # Introduction {-}
 
 This book is intended for folks who are new to programming and new to Unix-like
