--- a/06-Git-and-GitHub.Rmd
+++ b/06-Git-and-GitHub.Rmd
@@ -13,7 +13,7 @@ to try to figure out where the breaking change was made, you can use Git to
 restore the deleted file or find the new bug in your program. Git organizes
 groups of files that you're tracking into a **repository**, which is just a
 directory where all of the changes to files in that directory are tracked. Git
-can also help your collaborate with others when you're writing software. As
+can also help you collaborate with others when you're writing software. As
 [Karl Broman](https://twitter.com/kwbroman) says
 (paraphrasing [Mark Holder](https://twitter.com/mtholder)):
 "Your closest collaborator is you six months ago, but you don’t reply to
@@ -22,8 +22,8 @@ emails."
 GitHub is a website that provides remote Git repositories. A remote repository
 is just a Git repository that you're able to access over an internet connection.
 GitHub allows you to create public remote repositories for free, and anyone can
-see your code in these public repositories. If you want keep your code private
-then you can pay GitHub for private remote repositories. 
+see your code in these public repositories. If you want to keep your code private
+then you can pay GitHub for private remote repositories.
 
 If you're working
 on code together with a friend GitHub can help you sync changes to code files
@@ -91,7 +91,8 @@ echo "Welcome to My First Repo" > readme.txt
 
 Now that we've created a file in this Git repository, let's use `git status` to
 see what's going on in this repository. We'll be using `git status` continuously
-throughout this chapter in order to get information about the status Git repository.
+throughout this chapter in order to get information about the status of a Git 
+repository.
 
 ```{r, engine='bash', eval=FALSE}
 git status
@@ -118,7 +119,7 @@ the file that we want to track. Let's start tracking `readme.txt`:
 git add readme.txt
 ```
 
-Git now knows to track any changes to `readme.txt` let's see how the status of
+Git now knows to track any changes to `readme.txt`. Let's see how the status of
 the repository has changed:
 
 ```{r, engine='bash', eval=FALSE}
@@ -230,7 +231,7 @@ While we're at it let's also add a new line of text to `readme.txt`:
 echo "Learning Git is going well so far." >> readme.txt
 ```
 
-Now that's we've added two more files and we've made changes to one file let's
+Now that we've added two more files and we've made changes to one file let's
 take a look at the state of this repository.
 
 ```{r, engine='bash', eval=FALSE}
@@ -383,7 +384,7 @@ That looks much better.
 - Git tracks changes to plain text files (code files and text documents).
 - A directory where changes to files are tracked by Git is called a Git
 repository.
-- Change you working directory, then run `git init` to start a repository.
+- Change your working directory, then run `git init` to start a repository.
 - You can track changes to a file using `git add [names of files]`.
 - You can create a milestone about the state of your files using `git commit -m "message about changes since the last commit"`.
 - To examine the state of files in your repository use `git status`.
@@ -546,7 +547,7 @@ binary files that are generated as by-products of running code (PDFs or images),
 or secrets like passwords or API keys. A file in your Git repository called
 `.gitignore` can list names of files and sub-folders, or simple regular
 expressions (whatever you can use with `ls`) in order to specify files which
-should be never tracked. Each line of a `.gitignore` file should specify a file
+should never be tracked. Each line of a `.gitignore` file should specify a file
 or group of files that should not be tracked by Git. Let's make a `.gitignore`
 file to make sure that we never track image files in this repository:
 
@@ -565,7 +566,7 @@ git status
 ## nothing added to commit but untracked files present (use "git add" to track)
 ```
 
-Now that we're added an image to our repository, let's add a `.gitignore` file
+Now that we've added an image to our repository, let's add a `.gitignore` file
 to make sure Git doesn't track these kinds of files.
 
 ```{r, engine='bash', eval=FALSE}
@@ -627,7 +628,7 @@ ls
 - `git log` will show you your commit history.
 - `git diff` displays what has changed between the last commit and your current
 untracked changes.
-- You can specify a `.gitignore` file in order to tell Git to not track certain
+- You can specify a `.gitignore` file in order to tell Git not to track certain
 files.
 
 ### Exercises
@@ -658,7 +659,7 @@ git branch
 
 The star (`*`) indicates which branch you're currently on. The default branch
 that is created is always called *master*. Usually people use this branch as the
-working version of the software that their writing, while they develop new and
+working version of the software that they are writing, while they develop new and
 potentially unstable features on other branches.
 
 To add a branch we'll also use the `git branch` command, followed the name of
@@ -789,7 +790,7 @@ git commit -m "added a third line to readme.txt"
 ##  1 file changed, 1 insertion(+)
 ```
 
-Now we've made a commit on the `update-readme` branch, let's switch back to the
+Now that we've made a commit on the `update-readme` branch, let's switch back to the
 `master` branch, and then we'll take a look at `readme.txt`:
 
 ```{r, engine='bash', eval=FALSE}
@@ -813,7 +814,7 @@ cat readme.txt
 
 The third line that we added is gone! Don't fret, the line that we added isn't
 gone forever. We committed the change to this file while we were on the
-`update-readme` branch, so the up updated file is safely in that branch. Let's
+`update-readme` branch, so the updated file is safely in that branch. Let's
 switch back to that branch just to make sure:
 
 ```{r, engine='bash', eval=FALSE}
@@ -843,8 +844,8 @@ git commit -m "added weather info"
 
 This is a small example of how to use Git branching, but you can see how you
 can make incremental edits to plain text (usually code files) without
-effecting the `master` branch (the tested and working copy of your software)
-and without effecting any other branches. You can imagine how
+affecting the `master` branch (the tested and working copy of your software)
+and without affecting any other branches. You can imagine how
 this system could be used for multiple people to work on the same codebase at
 the same time, or how you could develop and test multiple software features
 without them interfering with each other. Now that we've made a couple of
@@ -1004,7 +1005,7 @@ cat readme.txt
 
 The first three lines of this file look normal, then things get interesting!
 The line between `<<<<<<< HEAD` and `=======` shows the version of the
-conflicted line between on the current branch. In Git terminology the `HEAD`
+conflicted line on the current branch. In Git terminology the `HEAD`
 represents the most recent commit on the branch which is currently checked out
 (which is `master` in this case). The line between `=======` and
 `>>>>>>> update-readme` shows the version of the line on the `update-readme`
@@ -1040,7 +1041,7 @@ depth with your study of Git I highly recommend the free and open source book
 - Git branching allows you and others to work on the same code base together.
 - You can create a branch with the command `git branch [name of branch]`.
 - To switch to a branch use `git checkout [name of branch]`.
-- You can combine a branch with your current branch with `git merge`.
+- You can combine a branch with your current branch by using `git merge`.
 
 ### Exercises
 
@@ -1106,7 +1107,7 @@ git remote
 Now that we've added our GitHub remote, let's perform our first Git **push**. A
 Git push updates a remote repository with all of the commits that we've made to
 our local Git repository. This first Git push you do when setting up a remote
-on GitHub with a local repository is little different from future Git pushes.
+on GitHub with a local repository is a little different from future Git pushes.
 We'll need to use the `-u` flag in order to set `origin` as the default remote
 repository so we don't have to provide its name every time we want to interact
 with it. Enter the following command, modified so that you're using your GitHub
@@ -1216,7 +1217,7 @@ git push
 Since we set up a default remote repository the first time we pushed, we can
 now simply enter `git push` in order to send our latest commits to the `master`
 branch on the `origin` remote. Now the page on GitHub for your repository should
-look like something like this:
+look something like this:
 
 ![](img/md-readme.png)
 
@@ -1227,7 +1228,7 @@ wrote has been rendered according to a few rules:
 - A word surrounded by single asterisks (`*word*`) makes that word *italicized*.
 - A word surrounded by double asterisks (`**word**`) makes that word **bold**.
 - You can create lists with hyphens (`-`) or numbers (`1., 2., 3.`).
-- Code can placed in to the middle of a line with single backticks (`` `code` ``).
+- Code can be placed in the middle of a line with single backticks (`` `code` ``).
 - A code block can be created by putting code in between a set of triple
 backticks (`` ``` ``).
 - You can insert a link with brackets and parentheses (`[Link text here](http://jhu.edu)`).
@@ -1245,11 +1246,11 @@ guide.
 ### Pull Requests
 
 The next two features of GitHub we're going to discuss - **pull requests** and 
-**forking** - are what make GitHub so great. A pull request allows you
+**forking** - are what make GitHub so great. A pull request allows you to
 interactively compare two different branches before you merge them so you can
 either go ahead with the merge or provide feedback to whoever opened the pull
 request. Essentially a pull request allows a person to ask another person if
-they're willing to incorperate changes on one branch into another branch. This
+they're willing to incorporate changes on one branch into another branch. This
 social coding transaction may involve you and a collaborator, you and a
 stranger, or you might open a pull request on your own repository just as a
 method of staying organized.
@@ -1300,7 +1301,7 @@ git merge master
 Now the `master` and `update-readme` branches are identical. Let's clean up this
 directory so that you can make a little personalized Markdown project. First
 let's delete all of the files in this directory that we don't really need,
-meaning everything execpt `README.md`.
+meaning everything except `README.md`.
 
 ```{r, engine='bash', eval=FALSE}
 rm *.txt
@@ -1397,8 +1398,8 @@ you to a page like this:
 There are a few important details on this page, so let's go through them. First
 under the "Open a pull request" heading you can see the names of two branches.
 The branch name after "base:" shows the branch that changes are being merged
-into (in the case the `master` branch), and the branch name after "compare:"
-shows the branch that has the changes (in the case the `update-readme` branch).
+into (in this case the `master` branch), and the branch name after "compare:"
+shows the branch that has the changes (in this case the `update-readme` branch).
 
 In the text boxes below you can write a title for your pull request (the default
 title in this case is the name of the last commit) and you can write comments
@@ -1415,18 +1416,18 @@ request. You should now see a screen like this:
 
 Congratulations on opening your first pull request! Let's take a look at what's
 happening on this page. Below the title of the pull request we can see three
-tabs called Conversation, Commits, and Files changed. In the Conversation tab
-we can add comments to the pull request which can be formatted with Markdown.
-The Commits tab lists the commits that have been made to the "compare" branch
-in this pull request. Finally the Files changed tab shows the same line-by-line
-comparison we saw before.
+tabs called **Conversation**, **Commits**, and **Files changed**. In the 
+**Conversation** tab we can add comments to the pull request which can be 
+formatted with Markdown. The **Commits** tab lists the commits that have been 
+made to the "compare" branch in this pull request. Finally the **Files changed** 
+tab shows the same line-by-line comparison we saw before.
 
 Usually when you're working with collaborators there's a great deal of
 discussion that occurs after you open a pull request. Git commits that are
 pushed to the "compare" branch (`update-readme` in the case) of the GitHub
 repository will be reflected in a pull request even after the request has been 
-opened. This way changes that are made as the result of the discussion can be 
-easily incorporated. Once you're ready go back to the Conversation tab and click
+opened. This way changes that are made as a result of the discussion can be 
+easily incorporated. Once you're ready go back to the **Conversation** tab and click
 the green "Merge pull request" button, then click the green "Confirm merge"
 button that appears. This will `git merge` the "compare" branch into the "base"
 branch on our remote repository. You just merged your first pull request! Now
